2012-04-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadCmd.c: [Bug 1603234] Stop leak in [thread::transfer].

2012-04-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadCmd.c: Refactor ThreadEventProc to make sure all paths
	out of the function call Tcl_Release on the necessary Tcl interpreters.
	Also, call ThreadErrorProc consistently whenever the return code is not
	TCL_OK (i.e. do not check for it to be equal to TCL_ERROR).

	* generic/threadCmd.c: Correct check for current thread in the
	ThreadReserve function [Bug 3411244].  Correct the order for releasing
	the interpreter and freeing memory, see check-in [6067508840].

2012-04-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/threadCmd.c:	[Bug 3411242] Crash in thread::release.

2011-08-01  Don Porter  <dgp@users.sourceforge.net>

	* win/vc/rules.vc: Extend support to MSVC10.  Thanks to Twylite.

2011-06-27  Don Porter  <dgp@users.sourceforge.net>

	* configure.in:	Copied revisions from the "sampleextension" package
	* Makefile.in:	to keep compatible with the latest INSTALL changes
	in TEA 3.9.  
	* configure:	autoconf-2.59

2010-12-08 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed Bug #3129844

2010-11-18  Don Porter  <dgp@users.sourceforge.net>

	* Makefile.in:		Revised the `make dist` target so that the
	* win/README.txt:	files under thread/win/vc in CVS are copied to
	* win/vc/makefile.vc:	thread/win in the release, where tcl/pkgs/
	* win/vc/thread_win.dsp:	expects to find them.

	* configure:	autoconf-2.59

2010-10-04 Zoran Vasiljevic <zv@archiware.com>

	* generic/configure      Regenrated for TEA 3.9. Bumped version string
	* generic/configiue.in   in all relevant files to 2.6.7  and autoconf'ed.
	* win/vc/pkg.vc

2010-09-28 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Initialize tsdPtr->interp to NULL immediately after
	releasing the interp on thread-exit that should hopefully resolve the 
	Tcl Bug #3026061
